--- a/assets/css/assistance.css
+++ b/assets/css/assistance.css
@@ -58,6 +58,16 @@ h1 a:hover, h2 a:hover, h3 a:hover, h4 a:hover, h5 a:hover, h6 a:hover{
   color: #fff;
 }
 
+.conteudo-blog{
+  padding: 30px 0 0
+}
+
+.widget-title{
+  background-color: #103d57;
+  color: #fff;
+  padding: 10px 8px;
+}
+
 .titulo-colucoes{
   text-align: center;
 }
@@ -156,6 +166,15 @@ h1 a:hover, h2 a:hover, h3 a:hover, h4 a:hover, h5 a:hover, h6 a:hover{
   background-color: #d9bd0d;
   color: #103d57;
   text-decoration: none;
+}
+
+.img-noticia-blog{
+  overflow: hidden;
+  height: 400px;
+}
+
+.img-noticia-blog img{
+  width: 100%;
 }
 
 /**************************************************************/
