--- a/assets/css/assistance.css
+++ b/assets/css/assistance.css
@@ -73,7 +73,7 @@ h1 a:hover, h2 a:hover, h3 a:hover, h4 a:hover, h5 a:hover, h6 a:hover{
 }
 
 .titulo-servicos{
-  font-size: 19px;
+  font-size: 28px;
   margin: 0px;
 }
 
@@ -96,7 +96,7 @@ h1 a:hover, h2 a:hover, h3 a:hover, h4 a:hover, h5 a:hover, h6 a:hover{
 }
 
 .site-title{
-  margin-top: 20px;
+  margin-top: 30px;
 }
 
 .area{
@@ -108,11 +108,19 @@ h1 a:hover, h2 a:hover, h3 a:hover, h4 a:hover, h5 a:hover, h6 a:hover{
   background-color: #d9bd0d;
   color: #103d57;
   text-transform: uppercase;
+  font-size: 18px;
+  font-weight: bold;
+  margin-top: 12px;
+  transition-duration: 0.3s;
 }
 
 .btn-consultor:hover{
   background-color: #103d57;
   color: #fff;
+}
+
+.linha-noticia{
+  margin-bottom: 20px;
 }
 
 .top-consultor{
@@ -122,9 +130,9 @@ h1 a:hover, h2 a:hover, h3 a:hover, h4 a:hover, h5 a:hover, h6 a:hover{
 
 .tel-header{
   font-weight: bold;
-  font-size: 26px;
-  padding-left: 15px;
-  padding-top: 15px;
+  font-size: 42px;
+  padding-right: 65px;
+  padding-top: -10px;
   display: block;
   float: left;
 }
@@ -137,6 +145,14 @@ h1 a:hover, h2 a:hover, h3 a:hover, h4 a:hover, h5 a:hover, h6 a:hover{
   font-size: 16px;
   text-transform: uppercase;
   font-weight: bold;
+}
+
+.newsletter{
+  padding: 15px 0 0;
+}
+
+.img-servicos img{
+  width: 100%;
 }
 
 /****************************************************************/
@@ -234,3 +250,17 @@ footer{
   background-color: #082d42;
 }
 /********************************************************/
+.navbar-toggle .icon-bar{
+  background-color: #fff;
+}
+
+.navbar-toggle:hover,
+.navbar-toggle:focus{
+  background-color: #d9bd0d !important;
+}
+
+@media (max-width:640px) {
+  footer .container{
+    display: none !important;
+  }
+}
